# Web-application-for-online-store

./: .flake8  READMY.md  main.py  pyproject.toml
html_pages/: catalog.html  category.html  contacts.html  home.html
src/: Главная.html  Каталог.html  Категория.html  Контакты.html
